--- a/backend/templates/base/blog.html
+++ b/backend/templates/base/blog.html
@@ -1,101 +1,102 @@
 {% extends 'index.html' %} {% load static %} {% block content %} {% include 'base/navbar_b.html'%}
 
-<div class="container mt-3">
-  <div class="row mt-4">
-    <div class="col-md-7">
-      <!--Post 1-->
-      <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
-        <div class="card border-0" id="blog-post">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <a href="{% url 'post_one' %}">
-                <img
-                  src="{% static 'images/cards/dubai_sheikh_zayed_road.jpg' %}"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                  id="img-card"
-                />
-              </a>
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h3 class="card-title">
-                  <a class="nav-link active" href="{% url 'post_one' %}">Should You Invest in Real Estate in Dubai?</a>
-                </h3>
-                <p class="card-text">On the pros and cons of investing in Dubai real estate sector.</p>
-                <!-- <p class="card-text">
+<div id="blog">
+  <div class="container">
+    <div class="row ">
+      <div class="col-md-7 pt-5">
+        <!--Post 1-->
+        <div class="mb-5 border-top border-bottom border-1 pt-4 pb-4">
+          <div class="card border-0" id="blog-post">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <a href="{% url 'post_one' %}">
+                  <img
+                    src="{% static 'images/cards/dubai_sheikh_zayed_road.jpg' %}"
+                    class="img-fluid rounded-start"
+                    alt="..."
+                    id="img-card"
+                  />
+                </a>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h3 class="card-title">
+                    <a class="nav-link active" href="{% url 'post_one' %}">Should You Invest in Real Estate in Dubai?</a>
+                  </h3>
+                  <p class="card-text">On the pros and cons of investing in Dubai real estate sector.</p>
+                  <!-- <p class="card-text">
                 <small class="text-body-secondary">Last updated 3 mins ago</small>
               </p> -->
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!--Post 2-->
-      <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
-        <div class="card border-0" id="blog-post">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <a href="{% url 'post_two' %}">
-                <img src="{% static 'images/cards/eoma_villa.jpg' %}" class="img-fluid rounded-start" alt="..." id="img-card" />
-              </a>
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h3 class="card-title">
-                  <a class="nav-link active" href="{% url 'post_two' %}">Window To Luxury: Dubai Most Expensive Villas</a>
-                </h3>
-                <p class="card-text">Spotlight on Most Expensive Villas in Palm Jumeirah.</p>
-                <!-- <p class="card-text">
+        <!--Post 2-->
+        <div class="mb-5 border-top border-bottom border-1 pt-4 pb-4">
+          <div class="card border-0" id="blog-post">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <a href="{% url 'post_two' %}">
+                  <img src="{% static 'images/cards/eoma_villa.jpg' %}" class="img-fluid rounded-start" alt="..." id="img-card" />
+                </a>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h3 class="card-title">
+                    <a class="nav-link active" href="{% url 'post_two' %}">Window To Luxury: Dubai Most Expensive Villas</a>
+                  </h3>
+                  <p class="card-text">Spotlight on Most Expensive Villas in Palm Jumeirah.</p>
+                  <!-- <p class="card-text">
                 <small class="text-body-secondary">Last updated 3 mins ago</small>
               </p> -->
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!--Post 3-->
-      <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
-        <div class="card border-0" id="blog-post">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <a href="{% url 'post_three' %}">
-                <img
-                  src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                  id="img-card"
-                />
-              </a>
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h3 class="card-title">
-                  <a class="nav-link active" href="{% url 'post_three' %}">Best Areas for Investment in Dubai</a>
-                </h3>
-                <p class="card-text">Here’s a brief review on some of the top areas to consider.</p>
-                <!-- <p class="card-text">
+        <!--Post 3-->
+        <div class="mb-5 border-top border-bottom border-1 pt-4 pb-4">
+          <div class="card border-0" id="blog-post">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <a href="{% url 'post_three' %}">
+                  <img
+                    src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    class="img-fluid rounded-start"
+                    alt="..."
+                    id="img-card"
+                  />
+                </a>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h3 class="card-title">
+                    <a class="nav-link active" href="{% url 'post_three' %}">Best Areas for Investment in Dubai</a>
+                  </h3>
+                  <p class="card-text">Here’s a brief review on some of the top areas to consider.</p>
+                  <!-- <p class="card-text">
                 <small class="text-body-secondary">Last updated 3 mins ago</small>
               </p> -->
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <!--POST ENDS-->
       </div>
-      <!--POST ENDS-->
-    </div>
-    <div id="blog_about" class="col-md-5">
-      <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
-        <h5 class="ps-3">ABOUT</h5>
-        <p class="mt-3 ps-3">
-          My name is Tom. I share insights on Real Estate
-          <span style="text-decoration: underline; font-size: large">
-            <a class="nav-link active pt-2" href=""><stong>Read More</stong></a>
-          </span>
-        </p>
-      </div>
-      <!-- <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
+      <div id="blog_about" class="col-md-5 pt-5">
+        <div class="mb-5 border-top border-bottom border-1 pt-4 pb-4">
+          <h5 class="ps-3">ABOUT</h5>
+          <p class="mt-3 ps-3">
+            My name is Tom. I share insights on Real Estate
+            <span style="text-decoration: underline; font-size: large">
+              <a class="nav-link active pt-2" href=""><stong>Read More</stong></a>
+            </span>
+          </p>
+        </div>
+        <!-- <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <h5 class="ps-3">CATEGORIES</h5>
         <select id="categories" class="form-select mt-3 ps-3" aria-label="Default select example">
           <option selected>Open this select menu</option>
@@ -104,6 +105,7 @@
           <option value="3">Three</option>
         </select>
       </div> -->
+      </div>
     </div>
   </div>
 </div>
