--- a/backend/templates/blog/most_expensive_villas_in_dubai.html
+++ b/backend/templates/blog/most_expensive_villas_in_dubai.html
@@ -1,84 +1,85 @@
 {% extends 'index.html' %} {% load static %} {% block content %} {% include 'base/navbar_b.html'%}
 
-<div class="container mt-3">
-  <div class="row mt-4">
-    <div class="col-md-7">
-      <div class="mb-2 border-top border-bottom border-3 pt-4 pb-4">
-        <h2>Window To Luxury: Dubai Most Expensive Villas</h2>
-      </div>
+<div id="blog-post">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7 mt-5">
+        <div class="mb-2 border-top border-bottom border-1 pt-4 pb-4 mb-3">
+          <h2>Window To Luxury: Dubai Most Expensive Villas</h2>
+        </div>
 
-      <img src="{% static 'images/cards/eoma_villa.jpg' %}" class="img-fluid mt-4 mb-5" />
+        <!-- <img src="{% static 'images/cards/eoma_villa.jpg' %}" class="img-fluid mt-4 mb-5" /> -->
 
-      <p>
-        Dubai promises an unparalleled experience of luxury and sophistication.
-        <strong>Marvelous villas</strong> are one of the aspects that prove luxurious status of that city.
-      </p>
-      <p>
-        Ultra wealthy people would like to keep their lavish lifestyle unchanged and choose villas that cost astronomical amount of money.
-      </p>
-      <p><strong>2022 was a year of most expensive transactions ever in Dubai.</strong></p>
-      <p>
-        Astonishing news firstly came with billionaire Mukesh Ambani who happened to be the mystery buyer of Dubai's most expensive villa
-        ever. The price of that villa turned out to be
-        <strong>$80 million.</strong>
-      </p>
-      <p>
-        Few weeks later that record was undertaken by
-        <strong>$82 million Casa Del Sole Mansion transaction</strong>
-        becoming the most expensive villa in Dubai.
-      </p>
-      <p>
-        Those two villas are located in symbolic for Dubai location – Palm Jumeirah. Palm Jumeirah is a man-made island shaped like a palm
-        tree.
-      </p>
+        <p>
+          Dubai promises an unparalleled experience of luxury and sophistication.
+          <strong>Marvelous villas</strong> are one of the aspects that prove luxurious status of that city.
+        </p>
+        <p>
+          Ultra wealthy people would like to keep their lavish lifestyle unchanged and choose villas that cost astronomical amount of money.
+        </p>
+        <p><strong>2022 was a year of most expensive transactions ever in Dubai.</strong></p>
+        <p>
+          Astonishing news firstly came with billionaire Mukesh Ambani who happened to be the mystery buyer of Dubai's most expensive villa
+          ever. The price of that villa turned out to be
+          <strong>$80 million.</strong>
+        </p>
+        <p>
+          Few weeks later that record was undertaken by
+          <strong>$82 million Casa Del Sole Mansion transaction</strong>
+          becoming the most expensive villa in Dubai.
+        </p>
+        <p>
+          Those two villas are located in symbolic for Dubai location – Palm Jumeirah. Palm Jumeirah is a man-made island shaped like a palm
+          tree.
+        </p>
 
-      <img
-        src="{% static 'images/posts/most_expensive_villas_in_dubai/palm_jumeirah.jpg' %}"
-        class="img-fluid mt-4 mb-4"
-        alt="Responsive image"
-      />
-      <p>
-        <strong>Casa Del Sole</strong> is a standout example of ultra-luxurious real estate in Dubai. The villa spans around 60,000 square
-        feet and includes extensive layout with 10 luxurious bedrooms and multiple spacious living and dining areas. Multiple amenities such
-        as swimming pools, entertainment, fitness, and outdoor spaces.
-      </p>
-      <img
-        src="{% static 'images/posts/most_expensive_villas_in_dubai/casa_del_sole.jpg' %}"
-        class="img-fluid mt-4 mb-4"
-        alt="Responsive image"
-      />
-      <p>
-        However, the appetite for luxurious villas don’t stop. And
-        <strong>astonishing EOME villas transactions</strong> are examples of continues demand for that. That villas are located in Palm
-        Jumeirah as well.
-      </p>
-      <p>
-        EOME villas are expected for handover in Q2 2025. However, nine out of 24 available villas are already sold out.
-        <strong>Two villas were sold for $55 million each.</strong>
-      </p>
-      <a href="{% url 'index' %}">
         <img
-          src="{% static 'images/posts/most_expensive_villas_in_dubai/eoma_palm_transactions.jpg' %}"
+          src="{% static 'images/posts/most_expensive_villas_in_dubai/palm_jumeirah.jpg' %}"
           class="img-fluid mt-4 mb-4"
           alt="Responsive image"
         />
-      </a>
-      <p>
-        The demand for luxurious villas in Dubai remains strong, fueled by the city’s economic stability, appeal to high-net-worth
-        individuals, and reputation as a global luxury hub.
-      </p>
-    </div>
-    <div id="blog_about" class="col-md-5">
-      <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
-        <h5 class="ps-3">ABOUT</h5>
-        <p class="mt-3 ps-3">
-          My name is Tom. I share insights on Real Estate
-          <span style="text-decoration: underline; font-size: large">
-            <a class="nav-link active pt-2" href=""><stong>Read More</stong></a>
-          </span>
+        <p>
+          <strong>Casa Del Sole</strong> is a standout example of ultra-luxurious real estate in Dubai. The villa spans around 60,000 square
+          feet and includes extensive layout with 10 luxurious bedrooms and multiple spacious living and dining areas. Multiple amenities
+          such as swimming pools, entertainment, fitness, and outdoor spaces.
+        </p>
+        <img
+          src="{% static 'images/posts/most_expensive_villas_in_dubai/casa_del_sole.jpg' %}"
+          class="img-fluid mt-4 mb-4"
+          alt="Responsive image"
+        />
+        <p>
+          However, the appetite for luxurious villas don’t stop. And
+          <strong>astonishing EOME villas transactions</strong> are examples of continues demand for that. That villas are located in Palm
+          Jumeirah as well.
+        </p>
+        <p>
+          EOME villas are expected for handover in Q2 2025. However, nine out of 24 available villas are already sold out.
+          <strong>Two villas were sold for $55 million each.</strong>
+        </p>
+        <a href="{% url 'index' %}">
+          <img
+            src="{% static 'images/posts/most_expensive_villas_in_dubai/eoma_palm_transactions.jpg' %}"
+            class="img-fluid mt-4 mb-4"
+            alt="Responsive image"
+          />
+        </a>
+        <p>
+          The demand for luxurious villas in Dubai remains strong, fueled by the city’s economic stability, appeal to high-net-worth
+          individuals, and reputation as a global luxury hub.
         </p>
       </div>
-      <!-- <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
+      <div id="blog_about" class="col-md-5 mt-5">
+        <div class="mb-5 border-top border-bottom border-1 pt-4 pb-4">
+          <h5 class="ps-3">ABOUT</h5>
+          <p class="mt-3 ps-3">
+            My name is Tom. I share insights on Real Estate
+            <span style="text-decoration: underline; font-size: large">
+              <a class="nav-link active pt-2" href=""><stong>Read More</stong></a>
+            </span>
+          </p>
+        </div>
+        <!-- <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
         <h5 class="ps-3">CATEGORIES</h5>
         <select id="categories" class="form-select mt-3 ps-3" aria-label="Default select example">
           <option selected>Open this select menu</option>
@@ -87,6 +88,7 @@
           <option value="3">Three</option>
         </select>
       </div> -->
+      </div>
     </div>
   </div>
 </div>
